Improving collection page.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.jpa.open-in-view=false
+
+spring.flyway.locations=classpath:/db/migration/{vendor}
+
+spring.datasource.url=jdbc:h2:file:./dbdata/artivact-vault;AUTO_SERVER=true
+spring.datasource.username=artivact
+spring.datasource.password=vault
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
+springdoc.api-docs.path=/api/docs
+
+logging.level.com.arassec=DEBUG
