--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "build": "quasar build"
   },
   "dependencies": {
+    "@google/model-viewer": "^1.12.0",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
